fixed position on frontPage, and added less gap

--- a/src/FrontPage/FrontPage.css
+++ b/src/FrontPage/FrontPage.css
@@ -18,7 +18,8 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 100px;
+  gap: 80px;
+  padding-top: 24px;
 }
 
 .frontPageText {
